# swissfin-intelligence

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
docs/: ROADMAP.md
scripts/: analyze_sentiment.py  download_call.py  run_pipeline.py  transcribe.py
src/swissfin/: __init__.py  config.py
src/swissfin/analysis/: __init__.py  tone_timeline.py
src/swissfin/audio/: __init__.py  chunker.py  downloader.py
src/swissfin/sentiment/: __init__.py  analyzer.py
src/swissfin/transcription/: __init__.py  whisper_runner.py
src/swissfin/utils/: __init__.py  io.py
tests/: test_analyzer.py  test_chunker.py
tests/fixtures/: sample_transcript.txt
