[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swissfin-intelligence"
version = "0.1.0"
description = "Privacy-first AI pipeline for Swiss earnings calls and financial documents — local Whisper transcription and multilingual sentiment analytics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aaron Ashraf" }]
keywords = [
    "swiss-finance",
    "earnings-calls",
    "whisper",
    "sentiment-analysis",
    "local-llm",
    "nlp",
    "fintech",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML / audio / NLP stack — relaxed lower bounds so installs resolve
    # against current PyPI. requirements.txt keeps the exact pins used for
    # reproducible builds; this list is the floor for `pip install -e .`.
    # CPU-compatible install path; CUDA wheels are picked automatically when
    # `pip install` runs on a CUDA-enabled host.
    "torch>=2.9.0",
    "transformers>=4.46.3",
    "tokenizers>=0.20.3",
    "safetensors>=0.4.5",
    "accelerate>=1.1.1",
    "sentencepiece>=0.2.0",
    "openai-whisper>=20240930",
    "librosa>=0.10.2.post1",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "streamlit>=1.40.1",
    "plotly>=5.24.1",
    "matplotlib>=3.9.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "yt-dlp>=2025.10.22",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    # Mirror of requirements-dev.txt (excluding the `-r requirements.txt`
    # include — runtime deps are already declared in [project].dependencies).
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "black==24.10.0",
]

[project.urls]
Homepage = "https://github.com/aaronashraf/swissfin-intelligence"
Issues = "https://github.com/aaronashraf/swissfin-intelligence/issues"
Roadmap = "https://github.com/aaronashraf/swissfin-intelligence/blob/main/docs/ROADMAP.md"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "app", "tests"]
extend-exclude = ["data", "models", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # handled by black/line-length
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802"]
"scripts/*" = ["T201"]
"app/*" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["swissfin"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src/swissfin"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
